Added change item

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,6 +4,7 @@ History
 0.1.0b3 - Unreleased
 --------------------
 
+- Fixed title in add/edit view for event folders
 - Added tests
 
 0.1.0b2 - 2012-03-16
