Fixed tests for Kotti 0.7.
The default layout has changed for 0.7. The browser tests have to be
altered to pass.

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,11 @@
 History
 =======
 
+0.1.0b4 - unreleased
+--------------------
+
+- Fixed tests for Kotti 0.7
+
 0.1.0b3 - 2012-07-12
 --------------------
 
